--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "element-plus": "^2.3.7",
     "less": "^4.1.3",
     "rollup-obfuscator": "^3.0.2",
+    "terser": "^5.18.1",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
